fixed scrollbar z index

--- a/css/graph.css
+++ b/css/graph.css
@@ -134,23 +134,21 @@
 
 #scrollbarX
 {
-    background-color: #969696;
+    background-color: #a7a7a7;
     height:           6px;
     border-radius:    3px;
     position:         absolute;
     display:          none;
     box-shadow:       0 0 0 1px rgba(255, 255, 255, 0.25);
-    z-index:          0;
 }
 
 
 #scrollbarY
 {
-    background-color: #969696;
+    background-color: #a7a7a7;
     width:            6px;
     border-radius:    3px;
     position:         absolute;
     display:          none;
     box-shadow:       0 0 0 1px rgba(255, 255, 255, 0.25);
-    z-index:          0;
 }
